<resources>
    <string name="app_name">OnDeviceTraining</string>
    <string name="app_version">V 2.0</string>
    <string name="app_copy_right_anrc">© 2019 anrc apps</string>

    <string name="menu_license">License</string>
    <string name="menu_about">About</string>
    <string name="action_settings">Settings</string>

    <string name="title_license">Software license</string>
    <string name="title_about">About</string>

    <string name="kws_caption">To start demonstration say \"begin inflight\".</string>
    <string name="menu_caption">Say \"digits\", \"forecast\" or \"phones\" to choose the grammar, language model or phonetic decoder example.</string>
    <string name="digits_caption">To try recognition of digits: say something like \"one two three four five\".</string>
    <string name="forecast_caption">To try recognition of an inflight speech like \"Good morning ladies and gentlemen\".</string>
    <string name="phone_caption">To try phonetic recognition say anything.</string>

    <string name="app_description_text_view">This is a demo app, which decodes in-cabin flight specific announcement.</string>
    <string name="collaboration_text_view">Collaboration</string>
    <string name="more_info_text_view">More info</string>
    <string name="web_url">http://zenlab.dese.iisc.ac.in</string>
    <string name="delete_button">DELETE</string>
    <string name="history_delete_dialog_title">Delete history?</string>
    <string name="history_delete_dialog_message">This action can not be undone!</string>
    <string name="no_data_found_text_view">Wow, such empty!</string>
</resources>
